--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h2{
+  border: 1px solid yellow;
+  margin-top:0px;
+  height: 70px;
+  padding-left: 30px;
+  padding-top: 12px;
   color: white;
+  background-color: rgb(251, 202, 5);
+  font-size: 35px;
+}
+.set{
+  border: 2px solid rgb(124, 124, 123);
+  height: 130px;
+  margin-left: 480px;
+  margin-right: 660px;
+  border-radius: 15px;
+  padding: 20px 20px 20px 20px;
+  box-shadow: 0 0 0.5em 0.5em rgba(216, 215, 215, 0.378);
+  margin-bottom: 25px;
+}
+input{
+  border-color: rgb(124, 124, 123);
+  border-radius: 5px;
+  width: 235px;
+  height: 35px;
+  padding-left: 10px;
+  outline-color: rgb(124, 124, 123);
+  font-size: large;
+  margin-bottom: 20px;
+}
+textarea{
+  height: 55px;
+  width: 239px;
+  border-color: rgb(124, 124, 123);
+  border-radius: 5px;
+  outline-color: rgb(124, 124, 123);
+  padding-left: 10px;
+  padding-top: 5px;
+  font-size: medium;
 }
 
-.App-link {
-  color: #61dafb;
+.txt{
+  margin-left: 1px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn{
+  border-radius: 18px;
+  font-size: 25px;
+  margin-top: 3px;
+  margin-left: 280px;
+  cursor: pointer;
+  background-color: rgb(251, 202, 5);
+}
+.fix-table{
+  float:left;
+  border: 1px solid rgb(139, 138, 138);
+  box-shadow: 0 0 1.1em 0.8em rgba(168, 166, 166, 0.378);
+  padding-top: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 30px;
+  margin-top: 50px;
+  border-radius: 10px;
+  margin-left: 45px;
+  height: auto;
+  width: 250px;
+}
+.del{
+  width: 50px;
+  height: 30px;
+  margin-left: 180px;
+  margin-top: 25px;
+  background-color: rgb(232, 86, 86);
+  cursor: pointer;
+  border-radius: 10px;
+  color: white;
+  border-color: rgb(232, 86, 86);
 }
